k8s/wichteln/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wichteln-ingress
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /wichteln/*
            pathType: Prefix
            backend:
              service:
                name: wichteln-service
                port:
                  number: 5000
